test/files/neg/bug877.check
bug877.scala:3: error: `{' expected
trait Foo extends A(22A, Bug!) {}
                   ^
one error found
